# Deep-Learning-Ops

./: .gitignore  README.md  Test_dataset.pt  class_list.txt  convert_to_onnx.py  onnx_inferance.py  requirements.txt  train.py  utills.py
torch_script_inferance/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  infrancescript.cpp  torchscript
