cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 17)
project( torchscript )
find_package( OpenCV REQUIRED )
list(APPEND CMAKE_PREFIX_PATH "/home/hparashar/mtech_projects/dlops_viva/libtorch/share/cmake")
find_package(Torch REQUIRED)
include_directories(${TORCH_INCLUDE_DIRS})
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( torchscript infrancescript.cpp)
target_link_libraries( torchscript ${TORCH_LIBRARIES} ${OpenCV_LIBS} )
target_link_libraries(torchscript stdc++fs)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -luuid")
